# DatAI

./: .gitignore  GCP_DEPLOYMENT_GUIDE.md  PROJECT_IMPLEMENTATION_PLAN.md  README.md  deploy-gcp.ps1  deploy-gcp.sh
.github/workflows/: ci.yml
app/backend/: .gitignore  Dockerfile  README.md  add_columns.py  cloudbuild.yaml  init_database.py  init_db_script.py  pyproject.toml  test_db_connection.py
app/backend/alembic/: env.py
app/backend/alembic/versions/: 001_initial_schema.py  002_add_firebase_uid.py
app/backend/app/: main.py
app/backend/app/api/v1/: __init__.py  admin.py  auth.py  chat.py  conversations.py  deps.py  health.py  inference.py
app/backend/app/core/: config.py  exceptions.py  logging.py  metrics.py  models_hidden.py  rate_limit.py  security.py  telemetry.py  text_cleaner.py
app/backend/app/db/: base.py  init_db.py  session.py
app/backend/app/models/: __init__.py  conversation.py  message.py  router_decision.py  user.py
app/backend/app/schemas/: __init__.py  auth.py  chat.py  common.py  conversation.py
app/backend/app/services/: __init__.py  auth.py  history.py  llm_client.py  router.py  safety.py
app/backend/tests/: README.md  conftest.py
app/backend/tests/integration/: __init__.py  test_chat.py  test_health.py
app/backend/tests/unit/: __init__.py  test_router.py  test_safety.py
app/frontend/: .env.production  .gcloudignore  .gitignore  .prettierrc  Dockerfile  Dockerfile.prod  README.md  default.conf  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/frontend/src/: App.tsx  main.tsx
app/frontend/src/components/: Button.tsx  Input.tsx  LoadingSpinner.tsx  Logo.tsx  ModelSelector.tsx
app/frontend/src/pages/: ChatPage.tsx  (+4 more)
infra/: docker-compose.dev.yml
(+3 files in other folders)
